--- a/DoDo/App.xaml
+++ b/DoDo/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="DoDo.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:DoDo"
-             StartupUri="Views.ChatSessionView.xaml">
+             xmlns:local="clr-namespace:DoDo">
     <Application.Resources>
          
     </Application.Resources>
