--- a/DoDo/Views/ChatSessionView.xaml
+++ b/DoDo/Views/ChatSessionView.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DoDo"
+        xmlns:local="clr-namespace:DoDo" 
         mc:Ignorable="d"
         Title="Ask Dodo" Height="450" Width="800"
         x:Name="dodoControl">
@@ -30,13 +30,17 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="0" Orientation="Vertical">
-                <ListBox x:Name="listboxQ" Grid.Row="1" BorderThickness="0"   ItemsSource="{Binding SelectedCategoryQuestions}">
+                <ListBox x:Name="listboxQ" Grid.Row="1" BorderThickness="0" SelectedItem="{Binding SelectedQuestion}"  ItemsSource="{Binding SelectedCategoryQuestions}">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Text}"/>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
+                <StackPanel>
+                    <TextBlock Text="{Binding QuestionText}"/>
+                    <TextBlock Text="{Binding QuestionText}"></TextBlock>
+                </StackPanel>
             </StackPanel>
             <StackPanel Grid.Column="1">
                 <ListBox x:Name="listboxSQ" Grid.Row="1" BorderThickness="0" ItemsSource="{Binding SelectedCategoryQuestions}">
