--- a/DoDo/App.xaml
+++ b/DoDo/App.xaml
@@ -3,6 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DoDo">
     <Application.Resources>
-         
+        
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/ConverterResources.xaml"/>
+                <ResourceDictionary Source="Resources/ButtonStyle.xaml"/>
+                <ResourceDictionary Source="Resources/ListBoxStyleDictionary.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
