--- a/DoDo/Views/ChatSessionView.xaml
+++ b/DoDo/Views/ChatSessionView.xaml
@@ -5,53 +5,70 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DoDo" 
         mc:Ignorable="d"
-        Title="Ask Dodo" Height="450" Width="800"
-        x:Name="dodoControl">
+        Title="Ask Dodo" Height="720" Width="1080"
+        x:Name="dodoControl" Background="White" WindowStyle="ToolWindow" WindowState="Maximized" ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="40*"/>
+            <RowDefinition Height="60*"/>
         </Grid.RowDefinitions>
-        <ItemsControl x:Name="tStack" Grid.Row="0" ItemsSource="{Binding Path=Categories}">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"/>
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <Button Content="{Binding Name}" Margin="20" Height="25" Command="{Binding Path=DataContext.CategorySelectedCommand, ElementName=dodoControl}" CommandParameter="{Binding}"/>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
+        <Grid Margin="0,10,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="40*"/>
+                <ColumnDefinition Width="60*"/>
+            </Grid.ColumnDefinitions>
+            <Image Stretch="Fill" Source="/Images/chatter.jpg"></Image>
+            <ItemsControl Grid.Column="1" x:Name="tStack" Grid.Row="0" ItemsSource="{Binding Path=Categories}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Button Style="{StaticResource PlainBigButton}" Content="{Binding Name}" Margin="20"  Command="{Binding Path=DataContext.CategorySelectedCommand, ElementName=dodoControl}" CommandParameter="{Binding}"/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </Grid>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition/>
+                <ColumnDefinition Width="55*"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="45*"/>
             </Grid.ColumnDefinitions>
-            <StackPanel Grid.Column="0" Orientation="Vertical">
-                <ListBox x:Name="listboxQ" Grid.Row="1" BorderThickness="0" SelectedItem="{Binding SelectedQuestion}"  ItemsSource="{Binding SelectedCategoryQuestions}">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Text}"/>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
-                <StackPanel>
-                    <TextBlock Text="{Binding QuestionText}"/>
-                    <TextBlock Text="{Binding QuestionText}"></TextBlock>
-                </StackPanel>
-            </StackPanel>
-            <StackPanel Grid.Column="1">
-                <ListBox x:Name="listboxSQ" Grid.Row="1" BorderThickness="0" ItemsSource="{Binding SelectedCategoryQuestions}">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Text}"/>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
-            </StackPanel>
-        </Grid>
+            <Border BorderBrush="#FFF67979" BorderThickness="2" CornerRadius="10">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="10*"/>
+                        <RowDefinition Height="75*"/>
+                        <RowDefinition Height="15*"/>
+                    </Grid.RowDefinitions>
+                    <Border Grid.Row="0" BorderBrush="#FFF67979" BorderThickness="0,0,0,2">
+                        <TextBlock Padding="15,10,0,15" Margin="5" FontWeight="Bold" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Stretch" Background="White" Height="50" Text="Kindly select an option to get more details"/>
+                    </Border>
+                    <ListBox Grid.Row="1" Style="{DynamicResource ListBoxStyle}" ItemContainerStyle="{DynamicResource ListBoxItemStyle}" ItemTemplate="{DynamicResource ListItemTempelate}" Grid.Column="0" x:Name="listboxQ" SelectedItem="{Binding SelectedQuestion}"  ItemsSource="{Binding SelectedCategoryQuestions}">
+                    </ListBox>
+                    <StackPanel Grid.Row="2">
+                        <TextBox Height="30"></TextBox>
+                        <Grid Margin="5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="80*"/>
+                                <ColumnDefinition Width="20*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="Didn't find the anwser you are thinking"></TextBlock>
+                            <Button Style="{DynamicResource PlainBigButton}" Width="100" Height="30" Content="Send Mail" Grid.Column="1"/>
+                        </Grid>
+                    </StackPanel>
+                </Grid>
+            </Border>
+            <Grid Grid.Column="1" HorizontalAlignment="Right">
+                <Path Data="M605.29999,139.54419 L562.10001,177 605.29997,209.39999 z" Fill="Red" HorizontalAlignment="Left" Height="30"  Stretch="Fill" Stroke="Transparent" VerticalAlignment="Top" Width="20"/>
+            </Grid>
+            <Border Grid.Column="2" Background="Red" CornerRadius="10">
+                <TextBlock Margin="20,60,0,50" FontWeight="Bold" Foreground="White" FontSize="16" TextWrapping="Wrap" Text="{Binding SelectedQuestionAnswerDisplay}"></TextBlock>
+            </Border>
 
+        </Grid>
     </Grid>
 </Window>
