More UI changes

--- a/DoDo/Resources/ListBoxStyleDictionary.xaml
+++ b/DoDo/Resources/ListBoxStyleDictionary.xaml
@@ -15,12 +15,12 @@
     </DataTemplate>
     <Style x:Key="ListBoxItemStyle" TargetType="{x:Type ListBoxItem}">
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Height" Value="50"/>                                              
+        <Setter Property="Height" Value="50"/>
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="BorderBrush" Value="Black"/>
-        <Setter Property="BorderThickness" Value="0,0,0,1"/>
+        <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="HorizontalAlignment" Value="Stretch"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
@@ -36,8 +36,12 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsSelected" Value="true">
-                            <Setter Property="Background" Value="Red"/>
-                            <Setter Property="Foreground" Value="White"/>
+                            <Setter Property="Background">
+                                <Setter.Value>
+                                    <SolidColorBrush Color="Red" Opacity="0.4"/>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter Property="Foreground" Value="Red"/>
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="true">
                             <Setter Property="Background" Value="Black"/>
@@ -48,7 +52,11 @@
                                 <Condition Property="IsSelected" Value="true"/>
                                 <Condition Property="Selector.IsSelectionActive" Value="false"/>
                             </MultiTrigger.Conditions>
-                            <Setter Property="Background" Value="OrangeRed"/>
+                            <Setter Property="Background">
+                                <Setter.Value>
+                                    <SolidColorBrush Color="OrangeRed" Opacity="0.6"/>
+                                </Setter.Value>
+                            </Setter>
                             <Setter Property="Foreground" Value="White"/>
                         </MultiTrigger>
                     </ControlTemplate.Triggers>
@@ -56,5 +64,4 @@
             </Setter.Value>
         </Setter>
     </Style>
-
 </ResourceDictionary>
