--- a/DoDo/Resources/ButtonStyle.xaml
+++ b/DoDo/Resources/ButtonStyle.xaml
@@ -1,7 +1,24 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Style x:Key="{x:Static SystemParameters.FocusVisualStyleKey}">
+        <Setter Property="Control.Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Rectangle StrokeThickness="2"
+                                   Stroke="Red"
+                                   StrokeDashArray="0.5 1.5"
+                                   SnapsToDevicePixels="true"/>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
     <Style x:Key="PlainBigButton" TargetType="{x:Type Button}">
-        <Setter Property="Background" Value="Red"/>
+        <Setter Property="Background">
+            <Setter.Value>
+                <SolidColorBrush Color="Red" Opacity="0.6"/>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="FocusVisualStyle" Value="{DynamicResource {x:Static SystemParameters.FocusVisualStyleKey}}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="FontWeight" Value="Bold"/>
@@ -21,7 +38,7 @@
 
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="Black" />
+                            <Setter Property="Background" Value="#FF404040" />
                             <Setter Property="Foreground" Value="White" />
                         </Trigger>
 
