--- a/DoDo/Views/ChatSessionView.xaml
+++ b/DoDo/Views/ChatSessionView.xaml
@@ -4,71 +4,77 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DoDo" 
-        mc:Ignorable="d"
-        Title="Ask Dodo" Height="720" Width="1080"
-        x:Name="dodoControl" Background="White" WindowStyle="ToolWindow" WindowState="Maximized" ResizeMode="NoResize">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="40*"/>
-            <RowDefinition Height="60*"/>
-        </Grid.RowDefinitions>
-        <Grid Margin="0,10,0,0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="40*"/>
-                <ColumnDefinition Width="60*"/>
-            </Grid.ColumnDefinitions>
-            <Image Stretch="Fill" Source="/Images/chatter.jpg"></Image>
-            <ItemsControl Grid.Column="1" x:Name="tStack" Grid.Row="0" ItemsSource="{Binding Path=Categories}">
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"/>
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Button Style="{StaticResource PlainBigButton}" Content="{Binding Name}" Margin="20"  Command="{Binding Path=DataContext.CategorySelectedCommand, ElementName=dodoControl}" CommandParameter="{Binding}"/>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </Grid>
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="55*"/>
-                <ColumnDefinition Width="3*"/>
-                <ColumnDefinition Width="45*"/>
-            </Grid.ColumnDefinitions>
-            <Border BorderBrush="#FFF67979" BorderThickness="2" CornerRadius="10">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="10*"/>
-                        <RowDefinition Height="75*"/>
-                        <RowDefinition Height="15*"/>
-                    </Grid.RowDefinitions>
-                    <Border Grid.Row="0" BorderBrush="#FFF67979" BorderThickness="0,0,0,2">
-                        <TextBlock Padding="15,10,0,15" Margin="5" FontWeight="Bold" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Stretch" Background="White" Height="50" Text="Kindly select an option to get more details"/>
-                    </Border>
-                    <ListBox Grid.Row="1" Style="{DynamicResource ListBoxStyle}" ItemContainerStyle="{DynamicResource ListBoxItemStyle}" ItemTemplate="{DynamicResource ListItemTempelate}" Grid.Column="0" x:Name="listboxQ" SelectedItem="{Binding SelectedQuestion}"  ItemsSource="{Binding SelectedCategoryQuestions}">
-                    </ListBox>
-                    <StackPanel Grid.Row="2">
-                        <TextBox Height="30"></TextBox>
-                        <Grid Margin="5">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="80*"/>
-                                <ColumnDefinition Width="20*"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Text="Didn't find the anwser you are thinking"></TextBlock>
-                            <Button Style="{DynamicResource PlainBigButton}" Width="100" Height="30" Content="Send Mail" Grid.Column="1"/>
-                        </Grid>
-                    </StackPanel>
-                </Grid>
-            </Border>
-            <Grid Grid.Column="1" HorizontalAlignment="Right">
-                <Path Data="M605.29999,139.54419 L562.10001,177 605.29997,209.39999 z" Fill="Red" HorizontalAlignment="Left" Height="30"  Stretch="Fill" Stroke="Transparent" VerticalAlignment="Top" Width="20"/>
+        mc:Ignorable="d" Height="720" Width="1080"
+        x:Name="dodoControl" Background="Black" Foreground="White" WindowStyle="None" WindowState="Maximized" ResizeMode="NoResize">
+    <DockPanel x:Name="RootWindow">
+        <DockPanel Background="#FFD1D1D1" x:Name="TitleBar" DockPanel.Dock="Top">
+            <Button Style="{StaticResource PlainBigButton}" Height="20" Width="20" Content="X"
+                    Click="Button_Click"                 
+                    DockPanel.Dock="Right" />
+            <TextBlock FontWeight="Bold" FontSize="16" Foreground="Maroon" HorizontalAlignment="Center">Ask Dodo ?</TextBlock>
+        </DockPanel>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="35*"/>
+                <RowDefinition Height="55*"/>
+                <RowDefinition Height="10*"/>
+            </Grid.RowDefinitions>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="65*"/>
+                    <ColumnDefinition Width="35*"/>
+                </Grid.ColumnDefinitions>
+                <ItemsControl Grid.Column="0" Margin="30" x:Name="tStack" Grid.Row="0" ItemsSource="{Binding Path=Categories}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Button Style="{StaticResource PlainBigButton}" Content="{Binding Name}" Margin="20"  Command="{Binding Path=DataContext.CategorySelectedCommand, ElementName=dodoControl}" CommandParameter="{Binding}"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
             </Grid>
-            <Border Grid.Column="2" Background="Red" CornerRadius="10">
-                <TextBlock Margin="20,60,0,50" FontWeight="Bold" Foreground="White" FontSize="16" TextWrapping="Wrap" Text="{Binding SelectedQuestionAnswerDisplay}"></TextBlock>
-            </Border>
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="65*"/>
+                    <ColumnDefinition Width="25"/>
+                    <ColumnDefinition Width="35*"/>
+                </Grid.ColumnDefinitions>
+                <Border Margin="0,5,5,5" BorderBrush="#FFF67979" BorderThickness="2" CornerRadius="10">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="10*"/>
+                            <RowDefinition Height="70*"/>
+                            <RowDefinition Height="20*"/>
+                        </Grid.RowDefinitions>
+                        <Border Background="#FFD1D1D1" Grid.Row="0" CornerRadius="10,10,0,0" >
+                            <TextBlock Padding="15,10,0,15" FontWeight="Bold" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Stretch" Height="50" Text="Kindly select an option to get more details" Foreground="Maroon"/>
+                        </Border>
+                        <ListBox Grid.Row="1" Style="{DynamicResource ListBoxStyle}" ItemContainerStyle="{DynamicResource ListBoxItemStyle}" ItemTemplate="{DynamicResource ListItemTempelate}" Grid.Column="0" x:Name="listboxQ" SelectedItem="{Binding SelectedQuestion}"  ItemsSource="{Binding SelectedCategoryQuestions}">
 
+                        </ListBox>
+                        <StackPanel Grid.Row="2">
+                            <TextBox Height="30"></TextBox>
+                            <Button Margin="10" Style="{StaticResource PlainBigButton}" Height="20"  Content="Know More"></Button>
+                        </StackPanel>
+                    </Grid>
+                </Border>
+                <Grid Grid.Column="1" HorizontalAlignment="Right">
+                    <Path Margin="{Binding AnswerPointerSymbolPosition}" Data="M605.29999,139.54419 L562.10001,177 605.29997,209.39999 z" Fill="White" HorizontalAlignment="Left" Height="30"  Stretch="Fill" Stroke="Transparent" VerticalAlignment="Top" Width="25"/>
+                </Grid>
+                <Border Grid.Column="2" Margin="0,5,5,5" BorderBrush="White" BorderThickness="2" CornerRadius="10">
+                    <StackPanel>
+                        <Border Grid.Row="0" CornerRadius="10,10,0,0" Background="#FFEEAAAA" >
+                            <TextBlock Padding="15,5,15,5" TextWrapping="Wrap" FontWeight="Bold" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Stretch" MinHeight="40" Text="{Binding SelectedQuestion.Text}" Foreground="Red"/>
+                        </Border>
+                        <TextBlock Margin="20,20,20,20" FontWeight="Bold" Foreground="White" FontSize="16" TextWrapping="Wrap" Text="{Binding SelectedQuestionAnswerDisplay}"></TextBlock>
+                    </StackPanel>
+                </Border>
+
+            </Grid>
         </Grid>
-    </Grid>
+    </DockPanel>
 </Window>
