--- a/DoDo/Views/MediaPlayer.xaml
+++ b/DoDo/Views/MediaPlayer.xaml
@@ -4,17 +4,10 @@
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	  xmlns:local="clr-namespace:DoDo.Views"
-	  mc:Ignorable="d"
-	  d:DesignHeight="300"
-	  d:DesignWidth="300"
-	  Title="MediaPlayer">
+	  mc:Ignorable="d" WindowState="Maximized" WindowStyle="none" BorderThickness="1" Background="Black"  >
 
-	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="40"/>
-			<RowDefinition Height="*" />
-		</Grid.RowDefinitions>
-		<Grid Grid.Row="0">
+	<Grid>		
+		<!--<Grid Grid.Row="0">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="40" />
 				<ColumnDefinition Width="40" />
@@ -44,14 +37,14 @@
 					Click="PositionVideo_Click"
 					Content="Peek"
 					x:Name="PositionVideo"></Button>			
-		</Grid>
-		<Grid Grid.Row="2">
+		</Grid>-->
 			<StackPanel>
 				<MediaElement Source="C:\Users\mgopidi\Desktop\Charting DiscussionDec1318.mp4"
 								  Name="DodoMediaPlayer"
 								  LoadedBehavior="Manual"
-								  UnloadedBehavior="Manual" ></MediaElement>
+								  UnloadedBehavior="Manual"
+							  MediaEnded="DodoMediaPlayer_MediaEnded"
+							 ></MediaElement>
 			</StackPanel>
-		</Grid>
 	</Grid>
 </Window>
