--- a/WebApplication1/Content/Site.css
+++ b/WebApplication1/Content/Site.css
@@ -18,6 +18,9 @@ textarea {
     max-width: 280px;
 }
 
+button{
+    margin:20px;
+}
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
